Hid all x-overflow to avoid svgs beyond page
This stops the svgs from being too big and will hide the Google "Not designed for mobile" message in search

--- a/scss/main.css
+++ b/scss/main.css
@@ -1,6 +1,7 @@
 html {
   height: 100%;
   background-color: #3249c3;
+  overflow-x: hidden;
 }
 
 html.red {
